gnome-terminal (2.10.0-1) experimental; urgency=low

  * New upstream release.
  * Update debian/watch.

 -- Josselin Mouette <joss@debian.org>  Wed, 27 Apr 2005 19:15:41 +0200

gnome-terminal (2.8.2-2) unstable; urgency=medium

  * Pass --as-needed to LDFLAGS, to reduce dependencies.
    + Incidentally removes the dependency upon libhowl0 (closes: #298850).

 -- Josselin Mouette <joss@debian.org>  Thu, 10 Mar 2005 22:50:38 +0100

gnome-terminal (2.8.2-1) unstable; urgency=medium

  * New upstream release (translation updates).
  * [debian/patches/update-config-guess-sub.patch] Dropped; upstream now
    includes a newer config.guess and config.sub than are available in 
    autotools-dev.
  * [debian/rules] Have binary-post-install clean up scrollkeeper's droppings.

 -- J.H.M. Dassen (Ray) <jdassen@debian.org>  Sat,  1 Jan 2005 12:20:00 +0100

gnome-terminal (2.8.0-2) unstable; urgency=low

  * Upload to unstable.
  * debian/watch:
    - updated.

 -- Sebastien Bacher <seb128@debian.org>  Fri, 19 Nov 2004 17:18:12 +0100

gnome-terminal (2.8.0-1) experimental; urgency=low

  * New upstream release.
  * [debian/patches/update-config-guess-sub.patch] Update config.{guess,sub}.
  * Fixed in 2.7.2:
    Recognize mailto: (with or without the mailto:...) and webdav: uris
    (Closes: #230549)
  * [debian/control.in] Dropped "libesd0-dev" build dependency, as the
    gnome-terminal code does not depend on it directly (and the libraries it
    depends on that do have a proper dependency on it).

 -- J.H.M. Dassen (Ray) <jdassen@debian.org>  Sun, 17 Oct 2004 09:49:40 +0200

gnome-terminal (2.7.3-1) experimental; urgency=low

  * GNOME Team upload.
  * New (development) upstream release.
  * debian/patches/fix_selection.patch:
    - removed, this patch is included in the code now.
  * debian/patches/tab-change.patch:
    - new patch to not display obnoxious characters on next/previous tab
      (Closes: #256207).
  * debian/postinst: