@@ -1,0 +1,7 @@
+debian/tmp/usr/bin
+debian/tmp/usr/share/application-registry
+debian/tmp/usr/share/applications
+debian/tmp/usr/lib
+debian/tmp/etc
+
+debian/gnome-terminal.wrapper /usr/bin
