@@ -1,0 +1,1 @@
+debian/gnome-terminal.1
